--- a/project.toml
+++ b/project.toml
@@ -14,7 +14,7 @@
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
 # Aufruf:
-# pack build juergenzimmermann/buchweb:1.0.0 --builder paketobuildpacks/builder:base
+# pack build juergenzimmermann/filmweb:1.0.0 --builder paketobuildpacks/builder:base
 
 # ------------------------------------------------------------------------------
 # P r o j e c t   D e s c r i p t o r   f u e r   p a c k
@@ -28,7 +28,7 @@
 # https://console.cloud.google.com/gcr/images/paketo-buildpacks/GLOBAL/nginx
 
 # [project]
-id = "com.acme.buchweb"
+id = "com.acme.filmweb"
 name = "Web Frontend fuer Microservice kunde"
 version = "1.0.0"
 authors = ["Juergen.Zimmermann@h-ka.de"]
